--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -27,19 +27,19 @@
             <a routerLink="brands" routerLinkActive="text-main dark:text-main" class="  py-2 px-3 text-gray-900 rounded-sm md:hover:bg-transparent hover:text-main md:p-0 dark:text-white  dark:hover:bg-gray-700  md:dark:hover:bg-transparent">Brands</a>
           </li>
         </ul>
-        <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0  dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+        <ul class="font-medium flex flex-col p-4  mt-4 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0  dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
           <li>
-            <a routerLink="cart" routerLinkActive="text-main dark:text-main" class=" relative  py-2 px-3 text-gray-900 rounded-sm md:hover:bg-transparent hover:text-main md:p-0 dark:text-white  dark:hover:bg-gray-700  md:dark:hover:bg-transparent">Cart<i class="fa-solid fa-cart-shopping "></i><div class="absolute inline-flex items-center justify-center w-6 h-6 text-xs font-bold text-white bg-main border-2 border-light rounded-full -top-5 -end-4 dark:border-gray-900">20</div></a>
+            <a routerLink="cart" routerLinkActive="text-main dark:text-main" class=" relative  py-2 px-3 text-gray-900 rounded-sm md:hover:bg-transparent hover:text-main  dark:text-white  dark:hover:bg-gray-700  md:dark:hover:bg-transparent">Cart<i class="fa-solid fa-cart-shopping "></i><div class="absolute inline-flex items-center justify-center w-6 h-6 text-xs font-bold text-white bg-main border-2 border-light rounded-full -top-5 -end-4 dark:border-gray-900">20</div></a>
           </li>
           <li>
-            <a  (click)="logout()" class="  py-2 px-3 text-gray-900 rounded-sm md:hover:bg-transparent hover:text-main md:p-0 dark:text-white  dark:hover:bg-gray-700  md:dark:hover:bg-transparent cursor-pointer">Logout</a>
+            <a  (click)="logout()" class="  py-2 px-3 text-gray-900 rounded-sm md:hover:bg-transparent hover:text-main  dark:text-white  dark:hover:bg-gray-700  md:dark:hover:bg-transparent cursor-pointer">Logout</a>
           </li>
         </ul>
 
        }@else {
-        <ul class="ms-auto  font-medium flex flex-col p-4 md:p-0 mt-4 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0  dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+        <ul class="ms-auto  font-medium flex flex-col p-4  mt-4 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0  dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
           <li>
-            <a routerLink="login" routerLinkActive="text-main dark:text-main" class="  py-2 px-3  rounded-sm md:bg-transparent-700 md:p-0 dark:text-white hover:text-main" >Signin</a>
+            <a routerLink="login" routerLinkActive="text-main dark:text-main" class="  py-2 px-3  rounded-sm md:bg-transparent-700  dark:text-white hover:text-main" >Signin</a>
           </li>
           <li>
             <a routerLink="register" routerLinkActive="text-main dark:text-main" class="  py-2 px-3 text-gray-900 rounded-sm md:hover:bg-transparent hover:text-main md:p-0 dark:text-white dark:hover:text-main dark:hover:bg-gray-700  md:dark:hover:bg-transparent">Signup</a>
