--- a/src/app/features/cart/components/cart/cart.component.html
+++ b/src/app/features/cart/components/cart/cart.component.html
@@ -18,8 +18,8 @@
             }
     
             <div class="flex justify-between">
-                <button routerLink="/main/products" class="main-btn w-auto">Continue Shopping</button>
-                <button routerLink="/main/checkout" class="main-btn w-auto bg-black text-white ms-5">Checkout <span class="ms-2">{{cartDetails.data.totalCartPrice}} EGP</span></button>
+                <button routerLink="/main/products" class="main-btn w-fit">Continue Shopping</button>
+                <button routerLink="/main/checkout" class="main-btn w-fit bg-black text-white ms-5">Checkout <span class="ms-2">{{cartDetails.data.totalCartPrice}} EGP</span></button>
             </div>
         </section>
     }@else {
