--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -12,7 +12,7 @@
       </button>
       <div class="hidden w-full md:flex grow ms-10 justify-between md:w-auto" id="navbar-default">
        @if(layout == 'user'){
-        <ul class="font-medium gap-3 flex  flex-col p-4 md:p-0 mt-6 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0  dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+        <ul class="font-medium gap-3 flex  flex-col p-4 md:p-0 mt-4 md:flex-row md:space-x-8 rtl:space-x-reverse   dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
           
           <li>
             <a routerLink="home" routerLinkActive="text-main dark:text-main" class="  py-2 px-3 text-gray-900 rounded-sm md:hover:bg-transparent hover:text-main md:p-0 dark:text-white  dark:hover:bg-gray-700  md:dark:hover:bg-transparent">Home</a>
@@ -27,7 +27,7 @@
             <a routerLink="brands" routerLinkActive="text-main dark:text-main" class="  py-2 px-3 text-gray-900 rounded-sm md:hover:bg-transparent hover:text-main md:p-0 dark:text-white  dark:hover:bg-gray-700  md:dark:hover:bg-transparent">Brands</a>
           </li>
         </ul>
-        <ul class="font-medium flex flex-col p-4  mt-4 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0  dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+        <ul class="font-medium flex flex-col p-4  mt-4 md:flex-row md:space-x-8 rtl:space-x-reverse   dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
           <li>
             <a routerLink="cart" routerLinkActive="text-main dark:text-main" class=" relative  py-2 px-3 text-gray-900 rounded-sm md:hover:bg-transparent hover:text-main  dark:text-white  dark:hover:bg-gray-700  md:dark:hover:bg-transparent">Cart<i class="fa-solid fa-cart-shopping "></i><div class="absolute inline-flex items-center justify-center w-6 h-6 text-xs font-bold text-white bg-main border-2 border-light rounded-full -top-3 -end-2 dark:border-gray-900">20</div></a>
           </li>
@@ -37,7 +37,7 @@
         </ul>
 
        }@else {
-        <ul class="ms-auto  font-medium flex flex-col p-4  mt-4 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0  dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+        <ul class="ms-auto  font-medium flex flex-col p-4  mt-4 md:flex-row md:space-x-8 rtl:space-x-reverse   dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
           <li>
             <a routerLink="login" routerLinkActive="text-main dark:text-main" class="  py-2 px-3  rounded-sm md:bg-transparent-700  dark:text-white hover:text-main" >Signin</a>
           </li>
