--- a/src/app/features/product/components/product-card/product-card.component.html
+++ b/src/app/features/product/components/product-card/product-card.component.html
@@ -10,6 +10,6 @@
     </div>
 
     
-        <button (click)="OnAddToCart()" class="main-btn opacity-0 w-full  hover:bg-main  transition duration-1000  group-hover:opacity-100">Add to cart</button>
+        <button (click)="OnAddToCart()" class="main-btn opacity-0 w-full  bg-main/80  hover:bg-main  transition duration-1000  group-hover:opacity-100">Add to cart</button>
 
 </div>
