--- a/src/app/features/orders/components/checkout/checkout.component.html
+++ b/src/app/features/orders/components/checkout/checkout.component.html
@@ -1,20 +1,27 @@
 
 <div class="container mx-auto px-4 py-8 my-10 max-w-xl">
     <h2 class="text-4xl font-bold ">Your Address:</h2>
-    <form >
+    <form class="max-w-sm md:max-w-xl mx-auto shadow-2xl shadow-main p-10 rounded-3xl  mt-5" [formGroup]="checkForm" >
         <div class="mb-5">
-            <label for="City" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">City</label>
-            <input type="text" id="City" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+            <label for="city" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">City</label>
+            <input formControlName="city" type="text" id="city" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+            <vm [control]="checkForm.get('city')"/>
         </div>
         <div class="mb-5">
-            <label for="Phone" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Phone</label>
-            <input type="text" id="Phone" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+            <label for="phone" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Phone</label>
+            <input formControlName="phone" type="text" id="phone" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+            <vm [control]="checkForm.get('phone')"/>
+              
         </div>
         
         <div>
-            <label for="Details" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Details</label>
-        <textarea id="Details" rows="4" class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Details"></textarea>
-        </div>
+            <label for="details" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Details</label>
+        <textarea formControlName="details" id="details" rows="4" class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Details"></textarea>
+        <vm [control]="checkForm.get('details')" />
+    </div>
+
+    <button class="main-btn bg-main w-full">Pay Now</button>
+    
     </form>
 
 
