--- a/src/app/layouts/auth-layout/components/login/login.component.html
+++ b/src/app/layouts/auth-layout/components/login/login.component.html
@@ -20,7 +20,7 @@
     </div>
     
     
-    <button   [class.bg-gray-400]="!isloading" type="submit"  class="main-btn">
+    <button   [class.bg-gray-400]="!isloading" type="submit"  class="bg-main w-full main-btn">
         @if(isloading ==true){
             
             Login
