--- a/src/app/layouts/auth-layout/components/register/register.component.html
+++ b/src/app/layouts/auth-layout/components/register/register.component.html
@@ -26,7 +26,7 @@
     </div>
     
     
-    <button [disabled]="authform.invalid ||!isloading" [class.bg-gray-400]="authform.invalid||!isloading" type="submit"  class="main-btn">
+    <button [disabled]="authform.invalid ||!isloading" [class.bg-gray-400]="authform.invalid||!isloading" type="submit"  class="bg-main w-full main-btn">
         @if(isloading ==true){
             
             Submit
