--- a/src/app/features/category/components/category/category.component.html
+++ b/src/app/features/category/components/category/category.component.html
@@ -1,15 +1,17 @@
-<section class="container mx-auto px-4 py-8 my-10 ">
+<section class="container mx-auto  my-10 ">
     
   
-      <div class="grid sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 xl:grid-cols-6 gap-12">
+      <div class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3  gap-4">
   
   
           @for ( category of allCategories ; track $index) {
   
-            <div  class="hover:border hover:border-main rounded-2xl p-20 md:p-3 hover:shadow-main  transition duration-1000 group">
+            <div  class="  relative mx-auto  p-20 md:p-3 hover:shadow-blue-500 hover:shadow-xl flex flex-col overflow-hidden transition duration-1000 group">
                 <div >
-                    <img [src]="category.category.image" class="w-full rounded-4xl" alt="">
-                <h5 class="brand text-main ">{{category.category.name}}</h5>
+                    <div >
+                        <img [src]="category.image" class="w-full" alt="">
+                    </div>
+                <h5 class="text-main bg-white text-center text-2xl font-bold absolute bottom-0 top-[80%] left-0 right-0">{{category.name}}</h5>
                 
                 </div>
             
