--- a/src/app/features/product/components/product-details/product-details.component.html
+++ b/src/app/features/product/components/product-details/product-details.component.html
@@ -13,7 +13,7 @@
                 <p class="mb-5 my-5 ">{{productDetails.description}} </p>
 
 
-                <button class="main-btn">Add to cart</button>
+                <button class="main-btn bg-main w-full">Add to cart</button>
             </div>
         </div>
     </div>
