--- a/src/app/features/product/components/product-list/product-list.component.html
+++ b/src/app/features/product/components/product-list/product-list.component.html
@@ -2,7 +2,7 @@
     
   <h2  class="text-4xl  font-bold mb-5">Popular Products</h2>
 
-    <div class="grid sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 xl:grid-cols-6 gap-12">
+    <div class="grid sm:grid-cols-1 md:grid-cols-4 lg:grid-cols-5 xl:grid-cols-6 sm:gap-1 xl:gap-12">
 
 
         @for (product of allProducts; track $index) {
