--- a/src/app/layouts/main-layout/components/category-slider/category-slider.component.html
+++ b/src/app/layouts/main-layout/components/category-slider/category-slider.component.html
@@ -1,1 +1,11 @@
-<p>category-slider works!</p>
+
+<div class="mt-20" >
+<owl-carousel-o [options]="customOptions">
+@for (img of categoryimgs; track $index) {
+
+      <ng-template carouselSlide><img [src]="img.image" class="w-40  h-70 curasor-pointer " [alt]="img.slug"></ng-template> 
+      
+      
+    }
+  </owl-carousel-o>
+</div>
