--- a/src/app/layouts/main-layout/components/category-slider/category-slider.component.html
+++ b/src/app/layouts/main-layout/components/category-slider/category-slider.component.html
@@ -3,7 +3,7 @@
 <owl-carousel-o [options]="customOptions">
 @for (img of categoryimgs; track $index) {
 
-      <ng-template carouselSlide><img [src]="img.image" class="w-40  h-70 curasor-pointer " [alt]="img.slug"></ng-template> 
+      <ng-template carouselSlide><img [src]="img.image" class=" w-20 lg:w-40 h-40 lg:h-70 curasor-pointer " [alt]="img.slug"></ng-template> 
       
       
     }
