--- a/src/app/features/category/components/category/category.component.html
+++ b/src/app/features/category/components/category/category.component.html
@@ -11,7 +11,7 @@
                     <div >
                         <img [src]="category.image" class="w-full" alt="">
                     </div>
-                <h5 class="text-main bg-white text-center text-2xl font-bold absolute bottom-0 top-[80%] left-0 right-0">{{category.name}}</h5>
+                <h5 class="text-main bg-white dark:bg-transparent text-center text-2xl font-bold absolute bottom-0 top-[80%] left-0 right-0">{{category.name}}</h5>
                 
                 </div>
             
