--- a/src/app/features/product/components/product-details/product-details.component.html
+++ b/src/app/features/product/components/product-details/product-details.component.html
@@ -13,6 +13,8 @@
                 <p class="mb-5 my-5 ">{{productDetails.description}} </p>
 
 
+
+                <button (click)="AddToCart()"  class="main-btn  w-full  bg-main/80  hover:bg-main    ">Add to cart</button>
                 
             </div>
         </div>
