--- a/src/app/features/product/components/product-list/product-list.component.html
+++ b/src/app/features/product/components/product-list/product-list.component.html
@@ -1,13 +1,17 @@
 <section class="container mx-auto px-4 py-8 my-10 ">
+
+    <input type="text" [(ngModel)]="searchTerm" class=" ms-[25%] w-1/2 rounded-xl my-10 p-1 border" placeholder="search...">
     
   <h2  class="text-4xl  font-bold mb-5">Popular Products</h2>
 
-    <div class="grid sm:grid-cols-1 md:grid-cols-4 lg:grid-cols-5 xl:grid-cols-6 sm:gap-1 xl:gap-12">
+    <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 xl:grid-cols-6 gap-5 xl:gap-12">
 
 
-        @for (product of allProducts; track $index) {
+        @for (product of allProducts|search:searchTerm; track $index) {
 
             <app-product-card [product]="product" (addToCart)="addToCart($event)"/>
+        }@empty {
+            <h1 class="text-center col-span-12 text-main animate-pulse text-4xl">No Product Found</h1>
         }
 
        
