--- a/src/app/features/cart/components/cart-item/cart-item.component.html
+++ b/src/app/features/cart/components/cart-item/cart-item.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="col-span-1 ">
         <button (click)="onUpdatequt(product.count+1)" class="border border-main hover:text-white  p-2 rounded-2xl hover:bg-main duration-300 cursor-pointer me-2 "><i class="fa fa-plus"></i></button>
-        <span class="me-2">{{product.count}}</span>
+        <span class="ms-3 lg:ms-0 lg:me-2">{{product.count}}</span>
         <button (click)="onUpdatequt(product.count-1)" class="border border-main hover:text-white  p-2 rounded-2xl hover:bg-main duration-300 cursor-pointer "><i class="fa fa-minus"></i></button>
 
 
