--- a/src/app/features/product/components/product-list/product-list.component.html
+++ b/src/app/features/product/components/product-list/product-list.component.html
@@ -1,6 +1,9 @@
 <section class="container mx-auto px-4 py-8 my-10 ">
 
-    <input type="text" [(ngModel)]="searchTerm" class=" ms-[25%] w-1/2 rounded-xl my-10 p-1 border" placeholder="search...">
+    <div class="relative">
+        <input type="text" id="search" [(ngModel)]="searchTerm" class=" ms-[25%] w-1/2  rounded-xl my-10 p-1 border" placeholder="search...">
+        <label for="search"><i class=" absolute right-32 top-12 lg:right-82 lg:top-12 fa-solid cursor-pointer fa-magnifying-glass"></i></label>
+    </div>
     
   <h2  class="text-4xl  font-bold mb-5">Popular Products</h2>
 
