--- a/src/app/features/orders/components/checkout/checkout.component.html
+++ b/src/app/features/orders/components/checkout/checkout.component.html
@@ -5,7 +5,7 @@
         <div class="mb-5">
             <label for="city" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">City</label>
             <input formControlName="city" type="text" id="city" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
-            <vm [control]="checkForm.get('city')"/>
+            <vm [control]="checkForm.get('city')" />
         </div>
         <div class="mb-5">
             <label for="phone" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Phone</label>
@@ -20,7 +20,7 @@
         <vm [control]="checkForm.get('details')" />
     </div>
 
-    <button class="main-btn bg-main w-full">Pay Now</button>
+    <button (click)="submitForm()"  class="main-btn bg-main w-full">Pay Now</button>
     
     </form>
 
